--- a/Projects/0 - Search/images.html
+++ b/Projects/0 - Search/images.html
@@ -4,18 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search</title>
+    <title>Image Search</title>
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/images.css">
 </head>
 
 <body>
     <nav>
         <div>
-            <a href="images.html">Images</a>
-        </div>
-        <div>
-            <a href="advanced.html">Advanced Search</a>
+            <a href="index.html">Search</a>
         </div>
     </nav>
     <main>
@@ -24,8 +21,8 @@
                 <form action="https://google.com/search" class="container">
                     <input type="text" name="q" class="full-width-container" autocapitalize="off" autocomplete="off"
                         spellcheck="false">
-                    <input type="submit" name="btnK" value="Google Search" class="form-button">
-                    <input type="submit" name="btnI" value="I'm Feeling Lucky" class="form-button">
+                    <input type="submit" value="Google Image Search" class="form-button">
+                    <input type="hidden" name="tbm" value="isch">
                 </form>
             </div>
         </div>
